# services/delivery/rest/candidates.go
@@ -65,3 +65,46 @@ func (h handler) UpdateCandidate(w http.ResponseWriter, r *http.Request, ps http
 
 	response.ResultWithData(w, response.SuccesOk, result)
 }
+
+func (h handler) AddExperience(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
+	var (
+		result models.CandidateExperience
+		args   models.CandidateExperienceArgument
+		err    error
+	)
+
+	// binding body json
+	err = json.NewDecoder(r.Body).Decode(&args)
+	if err != nil {
+		log.Printf("[candidate] [delivery] [AddExperience] while binding body, err:%+v\n", err)
+		response.Result(w, response.ErrorBadRequest)
+		return
+	}
+
+	// validate args
+	_, err = govalidator.ValidateStruct(args)
+	if err != nil {
+		log.Printf("[candidate] [delivery] [AddExperience] while ValidateStruct, err:%+v\n", err)
+		response.ResultError(w, response.ErrorValidation, err)
+		return
+	}
+
+	// check candidateID is same with id user login
+	userId := utils.GetAuthorization(r.Context()).ID
+	if userId != args.CandidateID {
+		log.Println("[candidate] [delivery] [AddExperience] while GetAuthorization")
+		response.Result(w, response.ErrorUnauthorized)
+		return
+	}
+
+	// usecase add experience
+	result, err = h.candidateUsecase.AddExperience(r.Context(), args)
+	if err != nil {
+		errCode, _ := strconv.Atoi(err.Error())
+		log.Println("[candidate] [delivery] [AddExperience] while candidateUsecase.AddExperience")
+		response.Result(w, errCode)
+		return
+	}
+
+	response.ResultWithData(w, response.SuccesOk, result)
+}
